--- a/web-app/bower.json
+++ b/web-app/bower.json
@@ -11,7 +11,8 @@
     "angular-cookies": "1.2.6",
     "angular-sanitize": "1.2.6",
     "angular-route": "1.2.6",
-    "momentjs": "~2.5.1"
+    "momentjs": "~2.5.1",
+    "angular-i18n": "~1.2.10"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
